# Mlproject1

./: .gitignore  README.md  application.py  pyproject.toml  requirements.txt
.ebextensions/: python.config
artifacts/: model.pkl  preprocessor.pkl
notebook/: EDA.ipynb  Model_training.ipynb
src/: utils.py
src/components/: data_ingestion.py  data_transformation.py  model_trainer.py
src/pipeline/: predict_pipeline.py
